# poc_zenml_vertexai

./: README.md  pyproject.toml
poc_zenml_vertexai/: huggingface_pipeline.py
